--- a/src/pages/stats/convert/components/CampaignTableStats/CampaignTableStats.less
+++ b/src/pages/stats/convert/components/CampaignTableStats/CampaignTableStats.less
@@ -90,6 +90,14 @@
             padding-left: @layout-spacing-l;
         }
 
+        .toggleBtn {
+            color: var(--black);
+
+            &:hover {
+                background-color: transparent !important;
+            }
+        }
+
         tr {
             height: 56px;
 
